Subida de archivos

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
 
+    <!-- <img src="http://localhost:3000/imagen/productos/5e9c2f4608c30c22100f6fb6-62.jpg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c3VhcmlvIjp7InJvbGUiOiJBRE1JTl9ST0xFIiwiZXN0YWRvIjp0cnVlLCJnb29nbGUiOmZhbHNlLCJfaWQiOiI1ZTg3ODMyOGJkMzNmZjMzMTQ0NjAxOTAiLCJub21icmUiOiJURVNUMSIsImVtYWlsIjoidGVzdDFAZ21haWwuY29tIiwiX192IjowLCJpbWciOiI1ZTg3ODMyOGJkMzNmZjMzMTQ0NjAxOTAtNjQ3LmpwZyJ9LCJpYXQiOjE1ODkxMjUzMzgsImV4cCI6MTU4OTEyNzkzMH0._YIp0ZOOnUaPsnWuY68VN_2yeeXkQiG8vaUADPIuub8" alt=""> -->
+
     <div class="g-signin2" data-onsuccess="onSignIn"></div>
     <a href="#" onclick="signOut();">Sign out</a>
     
